# sonos_pi3_refresh

./: LICENSE  README.md
sonos_pi3_controller/: Makefile  config-minimal.ini  config.ini  config.py  requirements.txt  sonos_pi3_controller.py  sonos_pi3_start.sh  xover-install.sh
sonos_pi3_controller/bt_pair_controller/: __init__.py  bt_pair_controller.py  pcp-bt.conf
sonos_pi3_controller/gpio_controller/: __init__.py  gpio_Controller.py
sonos_pi3_controller/lms_Controller/: __init__.py  lms_Controller.py
sonos_pi3_controller/mqtt_controller/: __init__.py  mqtt_controller.py
sonos_pi3_controller/network_check/: __init__.py  network_check.py
sonos_pi3_crossover/: INSTALL.txt
sonos_pi3_crossover/dsp_crossover_config/: Bass_Limited_filters_75db.config  Bass_Limited_filters_75db.txt  asound.conf-template  rew_to_dsp.sh
sonos_pi3_crossover/images/: Office Sonos3 House Curve (no 150hz shelf).txt
sonos_pi3_crossover/src/: Makefile  sonos-pi3-plugins.tcz  xover-install.sh
sonos_pi3_crossover/src/archives/: caps_0.9.26.tar.bz2  ladspa_sdk_1.15.tgz
sonos_pi3_crossover/src/caps-0.9.26/: AutoFilter.cc  Descriptor.h  Makefile  Pan.cc  defines.make  interface.cc
sonos_pi3_crossover/src/dsp/: config.mk  dsp
sonos_pi3_crossover/src/rt-plugins-0.0.6/src/: CMakeLists.txt  RTallpass1.c  RTallpass2.c  RTdecorrmls.c  RThighpass.c  RThighpass1.c  RThighshelf.c  RTlowpass.c  RTlowpass1.c  RTlowshelf.c  RTlr4hipass.c  RTlr4lowpass.c  RTparaeq.c
sonos_pi3_hardware/: Sonos Play3 Pi mounting tray v18.f3d  Sonos Play3 Pi mounting tray v18.stl
(+21 files in other folders)
